community/abiword: add enchant-2

--- a/community/abiword/APKBUILD
+++ b/community/abiword/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=abiword
 pkgver=3.0.4
-pkgrel=2
+pkgrel=3
 pkgdesc="A fully-featured word processor"
 url="http://www.abisource.com"
 arch="all !s390x"
 options="!check"  # Test suite requires valgrind, etc
 license="GPL-2.0-or-later"
-makedepends="gtk+3.0-dev readline-dev libgsf-dev fribidi-dev wv-dev
+makedepends="gtk+3.0-dev readline-dev libgsf-dev enchant2-dev fribidi-dev wv-dev
 	popt-dev libjpeg-turbo-dev librsvg-dev bzip2-dev goffice-dev pcre-dev
 	libxslt-dev perl"
 
@@ -30,6 +30,14 @@ for _i in $_plugins; do
 done
 
 source="http://www.abisource.com/downloads/abiword/$pkgver/source/abiword-$pkgver.tar.gz"
+
+prepare() {
+	default_prepare
+
+	sed -i 's/enchant >=/enchant-2 >=/' configure.ac
+
+	autoreconf -fi
+}
 
 build() {
 	./configure \
