community/pluma: switch to enchant-2

--- a/community/pluma/APKBUILD
+++ b/community/pluma/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=pluma
 pkgver=1.24.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A small and lightweight UTF-8 text editor for the MATE"
 url="https://github.com/mate-desktop/pluma"
 arch="all !s390x" # mate-desktop
@@ -10,7 +10,7 @@ license="GPL-2.0-or-later"
 # check fails as tracked in https://github.com/mate-desktop/pluma/issues/33
 options="!check"
 depends="mate-desktop"
-makedepends="intltool enchant-dev iso-codes-dev gtk+3.0-dev
+makedepends="intltool enchant2-dev iso-codes-dev gtk+3.0-dev
 	mate-desktop-dev gtksourceview-dev dconf-dev libsm-dev itstool
 	libxml2-utils fortify-headers libpeas-dev gsettings-desktop-schemas-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
