--- a/community/mcabber/APKBUILD
+++ b/community/mcabber/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=mcabber
 pkgver=1.1.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A small Jabber console client"
 url="https://mcabber.com"
 arch="all"
@@ -10,36 +10,30 @@ license="GPL-2.0-or-later"
 depends="beep"
 options="libtool"
 makedepends="loudmouth-dev glib-dev ncurses-dev gpgme-dev aspell-dev
-		libotr3-dev libidn-dev enchant-dev"
+	libotr3-dev libidn-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://mcabber.com/files/$pkgname-$pkgver.tar.bz2
+source="https://mcabber.com/files/mcabber-$pkgver.tar.bz2
 	fix-roster-colors-on-freebsd.patch"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--disable-static \
 		--enable-hgcset \
-		--enable-enchant \
 		--enable-aspell \
 		--enable-otr \
 		--prefix=/usr \
-		--mandir=/usr/share/man \
-		|| return 1
-	make || return 1
+		--mandir=/usr/share/man
+	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/examples
 	install -m644 mcabberrc.example \
-		"$pkgdir"/usr/share/doc/$pkgname/examples/mcabberrc.example \
-		|| return 1
+		"$pkgdir"/usr/share/doc/$pkgname/examples/mcabberrc.example
 }
 
 sha512sums="d12546e9fe9da94b6107f4d38d4083bee74e2702f7f2225e26be291230c6fe1319f60a3204da669dc00b14d69822425bf8214ebb723c3c4a7a33b1247a03093f  mcabber-1.1.0.tar.bz2
