--- a/community/geany-plugins/APKBUILD
+++ b/community/geany-plugins/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=geany-plugins
 pkgver=1.36
-pkgrel=1
+pkgrel=2
 pkgdesc="Plugins for Geany"
 url="https://plugins.geany.org/"
 arch="all"
 license="GPL-3.0-or-later"
-makedepends="lua-dev geany-dev enchant-dev intltool gtkspell-dev libxml2-dev
+makedepends="lua-dev geany-dev enchant2-dev intltool gtkspell-dev libxml2-dev
 	bash vte3-dev vala libsoup-dev gpgme-dev python3-dev"
 subpackages="$pkgname-dev $pkgname-doc
 	$pkgname-addons
