community/gtkspell: fix build

--- a/community/gtkspell/APKBUILD
+++ b/community/gtkspell/APKBUILD
@@ -6,8 +6,7 @@ pkgdesc="Word-processor-style highlighting and replacement of misspelled words i
 url="http://gtkspell.sourceforge.net/"
 arch="all"
 license="GPL-2.0-only"
-makedepends="gtk+2.0-dev enchant2-dev automake autoconf libtool
-	gtk-doc"
+makedepends="gtk+2.0-dev enchant2-dev automake autoconf libtool gtk-doc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="http://gtkspell.sourceforge.net/download/gtkspell-$pkgver.tar.gz
 	enchant-2.patch
@@ -15,6 +14,8 @@ source="http://gtkspell.sourceforge.net/download/gtkspell-$pkgver.tar.gz
 
 prepare() {
 	default_prepare
+
+	gtkdocize
 	autoreconf -fi
 }
 
@@ -22,7 +23,8 @@ build() {
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
-		--prefix=/usr
+		--prefix=/usr \
+		--disable-static
 	make
 }
 
