community/abiword: add missing gnu-autoconf deps

--- a/community/abiword/APKBUILD
+++ b/community/abiword/APKBUILD
@@ -9,7 +9,7 @@ options="!check"  # Test suite requires valgrind, etc
 license="GPL-2.0-or-later"
 makedepends="gtk+3.0-dev readline-dev libgsf-dev enchant2-dev fribidi-dev wv-dev
 	popt-dev libjpeg-turbo-dev librsvg-dev bzip2-dev goffice-dev pcre-dev
-	libxslt-dev perl"
+	libxslt-dev perl automake autoconf libtool"
 
 # openxml plugin
 makedepends="$makedepends boost-dev"
