community/abiword: apply enchant patch

--- a/community/abiword/APKBUILD
+++ b/community/abiword/APKBUILD
@@ -29,7 +29,8 @@ for _i in $_plugins; do
 	subpackages="$subpackages $pkgname-plugin-$_i:_plugin"
 done
 
-source="http://www.abisource.com/downloads/abiword/$pkgver/source/abiword-$pkgver.tar.gz"
+source="http://www.abisource.com/downloads/abiword/$pkgver/source/abiword-$pkgver.tar.gz
+	enchant.patch"
 
 prepare() {
 	default_prepare
@@ -71,4 +72,5 @@ plugins() {
 	mkdir -p "$subpkgdir"
 }
 
-sha512sums="121708e010cef6722cab5622dc762f2f92c46e43b65b90b881b4f25ff32c1696fa2d281a3a6f2c04d5b9231bbbd0040281e9d4d7e594ec0ace6caae9c9021ec4  abiword-3.0.4.tar.gz"
+sha512sums="121708e010cef6722cab5622dc762f2f92c46e43b65b90b881b4f25ff32c1696fa2d281a3a6f2c04d5b9231bbbd0040281e9d4d7e594ec0ace6caae9c9021ec4  abiword-3.0.4.tar.gz
+16f28eafdd1c1444dec5b3f8cbdd00f12c6178ba8db5bb94196064653cdada4cb8e4b2ac78ee9a7093c7968c0ddeb9f50a4e6209a5d5836a24b1b2f1941fb576  enchant.patch"
