community/poppler-data: clarify license

--- a/community/poppler-data/APKBUILD
+++ b/community/poppler-data/APKBUILD
@@ -6,12 +6,11 @@ pkgrel=0
 pkgdesc="encoding data for the poppler PDF rendering library"
 url="https://poppler.freedesktop.org/"
 arch="noarch"
-license="GPL2.0"
-source="https://poppler.freedesktop.org/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/"$pkgname-$pkgver
+license="GPL-2.0-or-later AND BSD-3-Clause AND MIT"
+options="!check" # No test suite
+source="https://poppler.freedesktop.org/poppler-data-$pkgver.tar.gz"
 
 package() {
-	cd "$builddir"
 	make prefix=/usr DESTDIR="$pkgdir" install
 	install -m755 -d "$pkgdir"/usr/share/licenses/$pkgname
 	install -m644 COPYING COPYING.adobe \
