--- a/main/poppler/APKBUILD
+++ b/main/poppler/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=poppler
-pkgver=0.82.0
-pkgrel=1
+pkgver=0.86.1
+pkgrel=0
 pkgdesc="PDF rendering library based on xpdf 3.0"
 url="https://poppler.freedesktop.org/"
 arch="all"
-options="!check"  # No test suite.
+options="!check" # No test suite.
 license="GPL-2.0-or-later"
 depends_dev="cairo-dev glib-dev"
 makedepends="$depends_dev cmake fontconfig-dev
@@ -24,7 +24,6 @@ prepare() {
 	local _linked_pkg=poppler-qt5
 	local _linked_apkbuild="$startdir"/../../community/$_linked_pkg/APKBUILD
 	mkdir -p "$builddir"
-	cd "$builddir"
 	if  [ -f "$_linked_apkbuild" ]; then
 		local _linked_ver=$( . "$_linked_apkbuild"; echo "$pkgver")
 		if [ "$_linked_ver" != "$pkgver" ]; then
@@ -35,19 +34,23 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
 	cmake .. \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DENABLE_UNSTABLE_API_ABI_HEADERS=ON \
 		-DBUILD_QT5_TESTS=OFF \
-		-DENABLE_QT5=OFF
+		-DENABLE_QT5=OFF \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS}
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -73,4 +76,4 @@ _cpp() {
 		"$subpkgdir"/usr/lib/
 }
 
-sha512sums="1631be30e398dd18a4e8c2cc893cf0d9469a98d93f02f2ffe3bc14857518b76674a10cafe89ee92b9886c3c6b03d50e214a6838c102f673a62789c9832cfa4a2  poppler-0.82.0.tar.xz"
+sha512sums="435fc1e7f3e8123e0adde9aa60c0d7dc17db367cde8908932abfef913cee6f27efeb1c4f2d6f316019a69a87f1fa5251be4216d0a81a681a24f24a70ac571670  poppler-0.86.1.tar.xz"
