community/poppler-qt5: upgrade to 0.86.1

--- a/community/poppler-qt5/APKBUILD
+++ b/community/poppler-qt5/APKBUILD
@@ -5,7 +5,7 @@
 
 pkgname=poppler-qt5
 _pkgname=poppler
-pkgver=0.82.0
+pkgver=0.86.1
 pkgrel=0
 pkgdesc="PDF rendering library based on xpdf 3.0"
 url="https://poppler.freedesktop.org/"
@@ -37,14 +37,21 @@ prepare() {
 }
 
 build() {
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
 	cmake .. \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DENABLE_UNSTABLE_API_ABI_HEADERS=ON \
 		-DBUILD_GTK_TESTS=OFF \
 		-DBUILD_QT5_TESTS=ON \
 		-DBUILD_CPP_TESTS=OFF \
-		-DENABLE_QT5=ON
+		-DENABLE_QT5=ON \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS}
 	make
 }
 
@@ -54,4 +61,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="1631be30e398dd18a4e8c2cc893cf0d9469a98d93f02f2ffe3bc14857518b76674a10cafe89ee92b9886c3c6b03d50e214a6838c102f673a62789c9832cfa4a2  poppler-0.82.0.tar.xz"
+sha512sums="435fc1e7f3e8123e0adde9aa60c0d7dc17db367cde8908932abfef913cee6f27efeb1c4f2d6f316019a69a87f1fa5251be4216d0a81a681a24f24a70ac571670  poppler-0.86.1.tar.xz"
