community/open-vm-tools: improve abuild

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -40,16 +40,11 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive
 	"
 builddir="$srcdir/$pkgname-stable-$_ver"
 
-check() {
-	export CUSTOM_PROCPS_NAME="procps"
-	export CFLAGS="$CFLAGS -Wno-unused-but-set-variable -D_GNU_SOURCE"
-	export CXXFLAGS="$CXXFLAGS -std=gnu++11 -fpermissive"
+prepare() {
+	default_prepare
 
-	cd "$builddir"/open-vm-tools
-	make check
-
-	checkbashisms scripts/linux/network
-	checkbashisms scripts/common/statechange.sh
+	cd open-vm-tools
+	autoreconf -vif
 }
 
 build() {
@@ -57,9 +52,8 @@ build() {
 	export CFLAGS="$CFLAGS -Wno-unused-but-set-variable -D_GNU_SOURCE"
 	export CXXFLAGS="$CXXFLAGS -std=gnu++11 -fpermissive"
 
-	cd "$builddir"/open-vm-tools
+	cd open-vm-tools
 
-	autoreconf -vif
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -77,26 +71,29 @@ build() {
 	make
 }
 
-package() {
-	cd "$builddir"/open-vm-tools
+check() {
+	cd open-vm-tools
 
-	make install DESTDIR="$pkgdir"
+	make check
+
+	checkbashisms scripts/linux/network
+	checkbashisms scripts/common/statechange.sh
+}
+
+package() {
+	make -C open-vm-tools install DESTDIR="$pkgdir"
 
 	cd "$pkgdir"
 
 	chmod -x ./etc/vmware-tools/*.conf*
 	mv ./etc/vmware-tools/vm-support ./usr/bin/vm-support
 
-	install -D -m 755 "$srcdir"/$pkgname.initd \
-		./etc/init.d/$pkgname
-	install -D -m 644 "$srcdir"/$pkgname.confd \
-		./etc/conf.d/$pkgname
-
-	install -D -m 644 "$srcdir"/$pkgname.logrotate \
-		./etc/logrotate.d/$pkgname
+	install -D -m 755 "$srcdir"/$pkgname.initd ./etc/init.d/$pkgname
+	install -D -m 644 "$srcdir"/$pkgname.confd ./etc/conf.d/$pkgname
+	install -D -m 644 "$srcdir"/$pkgname.logrotate ./etc/logrotate.d/$pkgname
 
 	mkdir -p ./lib/modules-load.d/
-	cat > ./lib/modules-load.d/"$pkgname".conf <<-EOF
+	cat > ./lib/modules-load.d/$pkgname.conf <<-EOF
 		vmblock
 		vmci
 		vmhgfs
@@ -110,19 +107,14 @@ package() {
 gtk() {
 	pkgdesc="Xorg apps and plugins for open-vm-tools"
 
-	mkdir -p "$subpkgdir"/usr/bin \
-		"$subpkgdir"/usr/lib/open-vm-tools/plugins/vmsvc \
-		"$subpkgdir"/etc/
+	amove etc/xdg
 
-	mv "$pkgdir"/usr/bin/vmware-user-suid-wrapper \
-		"$pkgdir"/usr/bin/vmware-vmblock-fuse \
-		"$pkgdir"/usr/bin/vmware-user \
-		"$subpkgdir"/usr/bin/
-	mv "$pkgdir"/etc/xdg "$subpkgdir"/etc/
-	mv "$pkgdir"/usr/lib/open-vm-tools/plugins/vmusr \
-		"$subpkgdir"/usr/lib/open-vm-tools/plugins/
-	mv "$pkgdir"/usr/lib/open-vm-tools/plugins/vmsvc/libresolutionKMS.so \
-		"$subpkgdir"/usr/lib/open-vm-tools/plugins/vmsvc/
+	amove usr/bin/vmware-user-suid-wrapper
+	amove usr/bin/vmware-vmblock-fuse
+	amove usr/bin/vmware-user
+
+	amove usr/lib/open-vm-tools/plugins/vmusr
+	amove usr/lib/open-vm-tools/plugins/vmsvc/libresolutionKMS.so
 }
 
 sha512sums="c09e5b66f318273c712880f8b8bfe9782f6302e798808eb588f643cfca763b6805d5672a95fc3c87bf18dd4549f7a0cdebf9b9ca313cf761a72864748895fab9  open-vm-tools-11.0.5.tar.gz
