--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -11,11 +11,34 @@ license="LGPL-2.1-or-later"
 subpackages="$pkgname-dbg $pkgname-gtk $pkgname-dev $pkgname-openrc $pkgname-doc"
 install="$pkgname.pre-install"
 checkdepends="cunit checkbashisms"
-makedepends="procps-dev libdnet-dev icu-dev glib-dev bash
-	gtk+3.0-dev libxext-dev libxinerama-dev libxtst-dev gtkmm3-dev fuse-dev
-	libnotify-dev libxrandr-dev libxcomposite-dev libice-dev libsm-dev
-	libtirpc-dev linux-headers libmspack-dev openssl-dev rpcgen
-	automake autoconf libtool m4 doxygen xmlsec-dev
+makedepends="
+	procps-dev
+	autoconf
+	automake
+	bash
+	doxygen
+	fuse-dev
+	glib-dev
+	gtk+3.0-dev
+	gtkmm3-dev
+	icu-dev
+	libdnet-dev
+	libice-dev
+	libmspack-dev
+	libnotify-dev
+	libsm-dev
+	libtirpc-dev
+	libtool
+	libxcomposite-dev
+	libxext-dev
+	libxinerama-dev
+	libxrandr-dev
+	libxtst-dev
+	linux-headers
+	m4
+	openssl-dev
+	rpcgen
+	xmlsec-dev
 	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/vmware/open-vm-tools/archive/stable-$_ver.tar.gz
 	0001-lib-misc-Recognize-Alpine-Linux.patch
