community/open-vm-tools: move static libs to subpkg -static

--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="The Open Virtual Machine Tools are the open source implementation of VM
 url="https://github.com/vmware/open-vm-tools/"
 arch="x86 x86_64"
 license="LGPL-2.1-or-later"
-subpackages="$pkgname-dbg $pkgname-gtk $pkgname-dev $pkgname-openrc $pkgname-doc"
+subpackages="$pkgname-dbg $pkgname-gtk $pkgname-static $pkgname-dev $pkgname-openrc $pkgname-doc"
 install="$pkgname.pre-install"
 checkdepends="cunit checkbashisms"
 makedepends="
