--- a/community/open-vm-tools/APKBUILD
+++ b/community/open-vm-tools/APKBUILD
@@ -8,7 +8,15 @@ pkgdesc="The Open Virtual Machine Tools are the open source implementation of VM
 url="https://github.com/vmware/open-vm-tools/"
 arch="x86 x86_64"
 license="LGPL-2.1-or-later"
-subpackages="$pkgname-dbg $pkgname-gtk $pkgname-static $pkgname-dev $pkgname-openrc $pkgname-doc"
+subpackages="
+	$pkgname-dbg
+	$pkgname-lang
+	$pkgname-gtk
+	$pkgname-static
+	$pkgname-dev
+	$pkgname-openrc
+	$pkgname-doc
+	"
 install="$pkgname.pre-install"
 checkdepends="cunit checkbashisms"
 makedepends="
@@ -125,6 +133,13 @@ package() {
 		vsock
 		vmw_balloon
 	EOF
+}
+
+lang() {
+	pkgdesc="Languages for package $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel lang"
+
+	amove usr/share/open-vm-tools/messages
 }
 
 gtk() {
