community/webkit2gtk: use enchant2 instead of enchant

--- a/community/webkit2gtk/APKBUILD
+++ b/community/webkit2gtk/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=webkit2gtk
 pkgver=2.26.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Portable web rendering engine WebKit for GTK+"
 url="https://webkitgtk.org/"
 arch="all"
@@ -13,7 +13,7 @@ depends="bubblewrap xdg-dbus-proxy dbus:org.freedesktop.Secrets"
 makedepends="
 	bison
 	cmake
-	enchant-dev
+	enchant2-dev
 	flex
 	geoclue-dev
 	gnutls-dev
