community/ldc: move from testing

--- a/community/ldc/APKBUILD
+++ b/community/ldc/APKBUILD
@@ -47,6 +47,9 @@ build() {
 		$CMAKE_CROSSOPTS "$builddir"
 	make
 
+	# Build the test runners
+	make all-test-runners
+
 	# CMake added the rpaths to the shared libs - strip them
 	chrpath -d "$builddir"/lib/*.so*
 }
