main/perl-list-allutils: upgrade to 0.16

--- a/main/perl-list-allutils/APKBUILD
+++ b/main/perl-list-allutils/APKBUILD
@@ -2,37 +2,37 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=perl-list-allutils
 _pkgreal=List-AllUtils
-pkgver=0.15
+pkgver=0.16
 pkgrel=0
 pkgdesc="Combines List::Util, List::SomeUtils and List::UtilsBy in one bite-sized package"
 url="https://metacpan.org/release/List-AllUtils"
 arch="noarch"
 license="Artistic-2.0"
-cpandepends="perl-list-utilsby perl-list-someutils"
-depends="$cpandepends perl-scalar-list-utils"
+depends="perl perl-scalar-list-utils perl-list-utilsby perl-list-someutils"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/D/DR/DROLSKY/List-AllUtils-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	default_prepare 
+	default_prepare
 
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
-	make && make test
+	make
+}
+
+check() {
+	make test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install 
+	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="58fbf53ac94a2d9b27f6091939105d502d4983b9f0d545849fef6e761c8782bd4edebcb07a816d9183d32a6203b32a2ed4ea58222e65319d62006ecaf6835e5f  List-AllUtils-0.15.tar.gz"
+sha512sums="e4644aebf8b152888f41082dca7380146a3a784af2c7a3705d8332b5effd35684702e85085a1865281be03c9f4d7e230141459d8680365c3437e928f7f948417  List-AllUtils-0.16.tar.gz"
