--- a/community/neovim/APKBUILD
+++ b/community/neovim/APKBUILD
@@ -17,7 +17,7 @@ pkgver=0.4.3
 pkgrel=1
 pkgdesc="Vim-fork focused on extensibility and agility"
 url="https://neovim.io"
-arch="all !s390x" # s390x: needs luajit
+arch="all"
 license="Apache-2.0 custom"
 makedepends="cmake gettext-dev gperf libtermkey-dev libuv-dev libvterm-dev
 	lua5.1-lpeg lua5.1-mpack msgpack-c-dev unibilium-dev libluv-dev"
