--- a/community/libluv/APKBUILD
+++ b/community/libluv/APKBUILD
@@ -7,7 +7,7 @@ pkgrel=0
 pkgdesc="Bare libuv bindings for lua"
 options="!check" # No testsuite
 url="https://github.com/luvit/luv"
-arch="all !s390x"
+arch="all"
 license="Apache-2.0"
 makedepends="cmake luajit-dev libuv-dev ninja"
 subpackages="$pkgname-dev"
