testing/efl: fix comment on why s390x is not enabled

--- a/testing/efl/APKBUILD
+++ b/testing/efl/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.23.3
 pkgrel=2
 pkgdesc="Enlightenment Foundation Libraries"
 url="https://www.enlightenment.org"
-arch="all !s390x" #luajit not available
+arch="all !s390x" # Missing librsvg
 license="LGPL-2.1-only"
 depends_dev="luajit-dev"
 makedepends="$depends_dev
