--- a/community/minetest/APKBUILD
+++ b/community/minetest/APKBUILD
@@ -5,8 +5,7 @@ pkgver=5.1.1
 pkgrel=0
 pkgdesc="An infinite-world block sandbox game and a game engine"
 url="http://www.minetest.net/"
-# luajit is not available for disabled arches
-arch="all !s390x"
+arch="all"
 license="LGPL-2.1-or-later AND CC-BY-SA-3.0"
 pkgusers="minetest"
 pkggroups="minetest"
