community/knot-resolver: fix license=, enable on s390x

--- a/community/knot-resolver/APKBUILD
+++ b/community/knot-resolver/APKBUILD
@@ -3,11 +3,11 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=knot-resolver
 pkgver=5.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Minimalistic caching DNS resolver implementation"
 url="https://www.knot-resolver.cz/"
-arch="all !s390x"  # limited by luajit
-license="GPL-3.0"
+arch="all"
+license="GPL-3.0-or-later"
 pkgusers="kresd"
 pkggroups="kresd"
 depends="dns-root-hints dnssec-root lua5.1-cqueues lua5.1-http"
@@ -52,13 +52,12 @@ subpackages="
 	$pkgname-doc
 	$pkgname-openrc
 	"
-source="https://secure.nic.cz/files/$pkgname/$pkgname-$pkgver.tar.xz
+source="https://secure.nic.cz/files/knot-resolver/knot-resolver-$pkgver.tar.xz
 	kresd.confd
 	kresd.initd
 	kres-cache-gc.initd
 	kres-cache-gc.confd
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
 #   4.3.0-r0:
@@ -136,8 +135,8 @@ dnstap() {
 	mv "$pkgdir"/$moddir/dnstap.so "$subpkgdir"/$moddir/
 }
 
-gpg_signature_extensions="asc"
-gpgfingerprints="
+_gpg_signature_extensions="asc"
+_gpgfingerprints="
 	good:BE26 EBB9 CBE0 59B3 910C  A35B CE8D D6A1 A50A 21E4
 	good:4A8B A48C 2AED 933B D495  C509 A1FB A5F7 EF8C 4869
 	B600 6460 B60A 80E7 8206  2449 E747 DF1F 9575 A3AA
