--- a/community/bam/APKBUILD
+++ b/community/bam/APKBUILD
@@ -2,13 +2,13 @@
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@alpinelinux.org>
 pkgname=bam
 pkgver=0.5.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Fast and flexible build system using Lua"
-arch="all !s390x" #luajit unavail on excluded arches
+options="!check" # Tests require python2
+arch="all"
 url="https://github.com/matricks/bam"
+license="Zlib"
 makedepends="lua5.3-dev"
-checkdepends="python"
-license='Zlib'
 source="$pkgname-$pkgver.tar.gz::https://github.com/matricks/bam/archive/v$pkgver.tar.gz
 	use-lua5.3.patch
 	"
@@ -23,7 +23,6 @@ check() {
 
 package() {
 	install -Dm755 bam "$pkgdir"/usr/bin/bam
-	install -Dm755 COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
 }
 
 sha512sums="e6f1b3daad6073c58b0e3cbf836bb0a6b66f0c36532d6e6eca9949239ab8b584cc88f892cce6f74974e370a8a688f33a95dde86dd65cc1790e49e5f8aeab0fef  bam-0.5.1.tar.gz
