community/lua-mmdb: enable s390x luajit

--- a/community/lua-mmdb/APKBUILD
+++ b/community/lua-mmdb/APKBUILD
@@ -11,18 +11,11 @@ url="https://github.com/daurnimator/mmdblua"
 arch="noarch"
 license="MIT"
 depends="lua"
-checkdepends="lua-busted lua5.1-compat53 lua5.2-compat53"
-subpackages=""
-source="https://github.com/daurnimator/mmdblua/archive/v$pkgver/$pkgname-$pkgver.tar.gz
+checkdepends="lua-busted lua5.1-compat53 lua5.2-compat53 luajit"
+source="https://github.com/daurnimator/mmdblua/archive/v$pkgver/lua-mmdb-$pkgver.tar.gz
 	https://github.com/maxmind/MaxMind-DB/archive/$_maxmind_gitrev/MaxMind-DB-$_maxmind_gitrev.tar.gz
 	"
 builddir="$srcdir/$_rockname-$pkgver"
-
-case "$CARCH" in
-	# luajit is not available for s390x
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -38,7 +31,7 @@ prepare() {
 }
 
 check() {
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		LUA_PATH='?/init.lua;;' lua$lver /usr/bin/busted
 	done
