community/lua-binaryheap: enable luajit on s390x

--- a/community/lua-binaryheap/APKBUILD
+++ b/community/lua-binaryheap/APKBUILD
@@ -10,16 +10,9 @@ url="https://tieske.github.io/binaryheap.lua/"
 arch="noarch"
 license="MIT"
 depends="lua"
-checkdepends="lua-busted"
-provides=""
+checkdepends="lua-busted luajit"
 source="https://github.com/Tieske/binaryheap.lua/archive/version_$_pkgver/binaryheap.lua-$pkgver.tar.gz"
 builddir="$srcdir/binaryheap.lua-version_$_pkgver"
-
-case "$CARCH" in
-	# luajit is not available for s390x
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -33,12 +26,12 @@ prepare() {
 }
 
 check() {
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		lua$lver /usr/bin/busted || {
 			# FIXME: Allow failure on Lua 5.3.
 			# https://github.com/Tieske/binaryheap.lua/issues/17
-			[ $lver = 5.3 ] || return 1
+			[ $lver = 5.3 ]
 		}
 	done
 }
