community/lua-date: enable luajit in s390x

--- a/community/lua-date/APKBUILD
+++ b/community/lua-date/APKBUILD
@@ -9,15 +9,9 @@ url="https://github.com/Tieske/date"
 arch="noarch"
 license="MIT"
 depends="lua"
-checkdepends="lua-busted"
-source="https://github.com/Tieske/$_rockname/archive/version_$pkgver/$pkgname-$pkgver.tar.gz"
+checkdepends="lua-busted luajit"
+source="https://github.com/Tieske/$_rockname/archive/version_$pkgver/lua-date-$pkgver.tar.gz"
 builddir="$srcdir/date-version_$pkgver"
-
-case "$CARCH" in
-	# luajit is not available for s390x
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -25,7 +19,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		lua$lver /usr/bin/busted
 	done
