--- a/community/lua-basexx/APKBUILD
+++ b/community/lua-basexx/APKBUILD
@@ -8,16 +8,9 @@ pkgdesc="A Lua library for base2, base16, base32, base64, base85 decoding and en
 url="https://github.com/aiq/basexx/"
 arch="noarch"
 license="MIT"
-checkdepends="lua-busted"
-subpackages=""
+checkdepends="lua-busted luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/aiq/$_pkgname/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -26,9 +19,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		lua$lver /usr/bin/busted
 	done
