--- a/community/lua-toml/APKBUILD
+++ b/community/lua-toml/APKBUILD
@@ -7,16 +7,8 @@ pkgdesc="TOML decoder/encoder for Lua"
 url="https://github.com/jonstoler/lua-toml"
 arch="noarch"
 license="Happy"
-depends=""
-checkdepends="lua-busted"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jonstoler/$pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
+checkdepends="lua-busted luajit"
+source="$pkgname-$pkgver.tar.gz::https://github.com/jonstoler/lua-toml/archive/v$pkgver.tar.gz"
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -25,11 +17,9 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
-		lua$lver /usr/bin/busted || return 1
+		lua$lver /usr/bin/busted
 	done
 }
 
