community/lua-rapidjson: enable luajit on s390x

--- a/community/lua-rapidjson/APKBUILD
+++ b/community/lua-rapidjson/APKBUILD
@@ -9,19 +9,11 @@ url="https://github.com/xpol/lua-rapidjson"
 arch="all"
 license="MIT"
 makedepends="cmake rapidjson-dev"
-subpackages=""
-checkdepends="lua-busted"
-source="$pkgname-$pkgver.tar.gz::https://github.com/xpol/$pkgname/archive/v$pkgver.tar.gz
+checkdepends="lua-busted luajit"
+source="$pkgname-$pkgver.tar.gz::https://github.com/xpol/lua-rapidjson/archive/v$pkgver.tar.gz
 	disable-c-cxx-flag-march.patch
 	use-dromozoa-utf8.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -32,8 +24,6 @@ done
 
 prepare() {
 	default_prepare
-	cd "$builddir"
-
 	# Remove bundled rapidjson (use system package),
 	# but keep bin directory - it's needed for tests.
 	rm -r rapidjson/include
@@ -59,7 +49,7 @@ build() {
 }
 
 check() {
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		cd "$builddir"/build-${lver/jit/5.1}
 		ln -sf ../rapidjson ../spec .
 
