community/lua-fifo: enable luajit on s390x

--- a/community/lua-fifo/APKBUILD
+++ b/community/lua-fifo/APKBUILD
@@ -9,16 +9,9 @@ pkgdesc="FIFO library for Lua"
 url="https://github.com/daurnimator/fifo.lua"
 arch="noarch"
 license="MIT"
-checkdepends="lua-busted"
-subpackages=""
+checkdepends="lua-busted luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/daurnimator/$_pkgname/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -27,9 +20,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		lua$lver /usr/bin/busted
 	done
