community/lua-argparse: enable luajit on s390x

--- a/community/lua-argparse/APKBUILD
+++ b/community/lua-argparse/APKBUILD
@@ -8,17 +8,9 @@ pkgdesc="Feature-rich command line parser for Lua"
 url="https://github.com/mpeterv/argparse"
 arch="noarch"
 license="MIT"
-depends=""
-checkdepends="lua-busted"
-subpackages=""
+checkdepends="lua-busted luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/mpeterv/$_pkgname/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -27,10 +19,9 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
 	mkdir .bin
 
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 
 		ln -sf /usr/bin/lua$lver .bin/lua
