community/lua-http: enable luajit on s390x

--- a/community/lua-http/APKBUILD
+++ b/community/lua-http/APKBUILD
@@ -8,19 +8,13 @@ url="https://github.com/daurnimator/lua-http"
 arch="noarch"
 license="MIT"
 depends="lua-binaryheap lua-cqueues lua-basexx lua-fifo lua-lpeg lua-lpeg_patterns>=0.5 lua-ossl"
-checkdepends="lua-busted lua5.1-compat53 lua5.2-compat53 lua5.1-bit32"
-makedepends=""
-subpackages=""
-source="$pkgname-$pkgver.tar.gz::https://github.com/daurnimator/$pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+checkdepends="lua-busted lua5.1-compat53 lua5.2-compat53 lua5.1-bit32 luajit"
+source="$pkgname-$pkgver.tar.gz::https://github.com/daurnimator/lua-http/archive/v$pkgver.tar.gz"
 
 case "$CARCH" in
-	# luajit is not available for s390x
-	s390x) _luajit="";;
 	# FIXME: Some tests fail with "Address not available".
 	# and ppc64le hangs
 	aarch64|arm*|ppc64le) options="!check";;
-	*) checkdepends="$checkdepends luajit"; _luajit="jit";;
 esac
 
 _luaversions="5.1 5.2 5.3"
@@ -30,9 +24,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		lua$lver /usr/bin/busted
 	done
