--- a/community/lua-glob-pattern/APKBUILD
+++ b/community/lua-glob-pattern/APKBUILD
@@ -8,16 +8,9 @@ pkgdesc="Converts file glob string to Lua pattern string"
 url="https://github.com/davidm/lua-glob-pattern"
 arch="noarch"
 license="MIT"
-checkdepends=""
-subpackages=""
-source="$pkgname-$pkgver.tar.gz::https://github.com/davidm/$pkgname/archive/$_gitrev.tar.gz"
+checkdepends="luajit"
+source="$pkgname-$pkgver.tar.gz::https://github.com/davidm/lua-glob-pattern/archive/$_gitrev.tar.gz"
 builddir="$srcdir/$pkgname-$_gitrev"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -26,9 +19,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		lua$lver test.lua
 	done
