community/lua-fun: enable luajit on s390x

--- a/community/lua-fun/APKBUILD
+++ b/community/lua-fun/APKBUILD
@@ -10,16 +10,9 @@ url="https://rtsisyk.github.io/luafun/"
 arch="noarch"
 license="MIT"
 depends="lua"
-checkdepends=""
-provides=""
+checkdepends="luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/rtsisyk/$_pkgname/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -28,17 +21,13 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on Lua $lver"
 		lua$lver tests/runtest tests/*.lua
 	done
 }
 
 package() {
-	cd "$builddir"
-
 	install -m 644 -D fun.lua "$pkgdir"/usr/share/lua/common/fun.lua
 
 	echo 'rock_manifest = {}' > rock_manifest
