community/lua-busted: enable luajit on s390x

--- a/community/lua-busted/APKBUILD
+++ b/community/lua-busted/APKBUILD
@@ -11,19 +11,12 @@ license="MIT"
 # Note: We have replaced dkjson with lua-cjson.
 depends="lua-cliargs lua-filesystem lua-system lua-cjson lua-say
 	lua-luassert lua-term lua-penlight lua-mediator"
-checkdepends=""
-subpackages=""
+checkdepends="luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/Olivine-Labs/$_pkgname/archive/v$pkgver.tar.gz
 	use-cjson.patch"
 builddir="$srcdir/$_pkgname-$pkgver"
 # tests fail on x86_64 because cl_standalone.lua output is different, i don't know why --kaniini
 options="!check"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	ppc64le | s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -32,37 +25,31 @@ for _v in $_luaversions; do
 done
 
 prepare() {
-	default_prepare || return 1
+	default_prepare
 
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		sed "s|/usr/bin/env lua|/usr/bin/lua$lver|" \
-			bin/busted > bin/busted-$lver || return 1
+			bin/busted > bin/busted-$lver
 	done
 }
 
 check() {
-	cd "$builddir"
-
 	mv bin/busted bin/busted.orig
 
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		# Some specs invokes bin/busted as subprocess, so we must
 		# ensure that it will run on the correct Lua version.
-		install -m 755 bin/busted-$lver bin/busted || return 1
+		install -m 755 bin/busted-$lver bin/busted
 
 		msg "Running tests on lua$lver..."
-		lua$lver bin/busted spec || return 1
+		lua$lver bin/busted spec
 	done
 
 	mv bin/busted.orig bin/busted
 }
 
 package() {
-	cd "$builddir"
-
-	# Executable with shebang `/usr/bin/env lua`.
+	# Executable with shebang #!/usr/bin/env lua.
 	install -m 755 -D bin/busted "$pkgdir"/usr/bin/busted
 }
 
@@ -77,7 +64,7 @@ _subpackage() {
 	cd "$builddir"
 
 	mkdir -p "$destdir"
-	cp -r busted/* "$destdir" || return 1
+	cp -r busted/* "$destdir"
 
 	mkdir -p "$rockdir"
 	echo 'rock_manifest = {}' > "$rockdir"/rock_manifest
