--- a/community/artikulate/APKBUILD
+++ b/community/artikulate/APKBUILD
@@ -13,19 +13,20 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/artikulate-$
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="ef316a11304f6fb131628de8b5a8848ba332fe7709ad7c0c641548518469248432a05af04ae1e78d0bc8d8953aa1b2aaaedc0bac78fe834b65e218bae6dedba8  artikulate-19.12.2.tar.xz"
