--- a/community/blinken/APKBUILD
+++ b/community/blinken/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="609f44a0eb705c9d1f46e64bc4beb1ff760137dd0e4ad821108040824c064f763af7c03332e6ad86bc64fd568b3d478116cfc63f230d7ecd3f81aa37b504ab2e  blinken-19.12.2.tar.xz"
