community/cantor: move from testing

--- a/community/cantor/APKBUILD
+++ b/community/cantor/APKBUILD
@@ -13,19 +13,20 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/cantor-$pkgv
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="bc13824d41d6752700b6881eeb1316e422dc2908c7d628dd1401e348b74690e0acf3b6d6b096a7034ecb09a91b96f4c9b30d00b160bb994ffaf065287e81fcbc  cantor-19.12.2.tar.xz"
