--- a/community/kalgebra/APKBUILD
+++ b/community/kalgebra/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="2ae771a71ef65456a19275fb1ba31727479f59b95d099a52fc389abb74f8ab27498d01fffead543647e179ea9322b88de97f101eea9118b92cea74754c3c9181  kalgebra-19.12.2.tar.xz"
