--- a/community/ktorrent/APKBUILD
+++ b/community/ktorrent/APKBUILD
@@ -20,20 +20,21 @@ subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
 	# The infowidget plugin is disabled due to an incompatibility with musl
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DENABLE_INFOWIDGET_PLUGIN=FALSE
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="b62d05650216721299dc9db23da1a2d6ae5d3b77583ad4bd99ac032d7b135cce567feff3b66d27ac001d77e30517112e4e8c8bf8e83c1106a79509ec45498621  ktorrent-5.1.2.tar.xz"
