--- a/community/kalzium/APKBUILD
+++ b/community/kalzium/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang $pkgname-dev"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="e12ca2ce5ef683c66232f057827f823b2fd9b8e604053326e9ba496a319b48fbf025ac4a09c6779ed8c7320c98d87031516e9e6f73b15b17deb4b94219d69039  kalzium-19.12.2.tar.xz"
