--- a/community/kanagram/APKBUILD
+++ b/community/kanagram/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="f426ea393f02cc6de9dc1fab562d08e071b81a280a4ae20b89316ef38f0088b3c834bc9d514b4fc155fb3a997ec34272199d2507f7c576677c9c2a5fb5fe8166  kanagram-19.12.2.tar.xz"
