--- a/community/kbruch/APKBUILD
+++ b/community/kbruch/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="dee13ebfc48694bdd6ce6aa1b53c1811d61be4605ea4ed388d52f57375a6617b139ca96ac069b43be1cea7e11d96e44934f0ed5047b98adc546ae89e74a4116c  kbruch-19.12.2.tar.xz"
