community/kgeography: move from testing

--- a/community/kgeography/APKBUILD
+++ b/community/kgeography/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="14bb57a581df72ad320bddad39d4c65282f850b48dcba6cac5fcbb6c6dcd142bde05ad90cb1d5074388b79a4cb9224052b1ea1f57a4a9eec5f39fe68a383ca08  kgeography-19.12.2.tar.xz"
