community/khangman: move from testing

--- a/community/khangman/APKBUILD
+++ b/community/khangman/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="9c884cadd9cd0a7393c3be98ab8dc44d85690fcf65041ebbe81c0d87dc1e5aa11f965ee283da260400a1122adb6e1740366a5235d0c38276a8222790c4d10d3c  khangman-19.12.2.tar.xz"
