community/kig: move from testing

--- a/community/kig/APKBUILD
+++ b/community/kig/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="3f091e85d61b5889183097201161ca9378c1085d947a2819e43dc937e8c9c433ba8fba10d8fea1ff1c20af93bd05f9fc8718a130f8d7e17fcd1ab97726cdb117  kig-19.12.2.tar.xz"
