community/kiten: move from testing

--- a/community/kiten/APKBUILD
+++ b/community/kiten/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang $pkgname-dev"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="f12e75f378fee504ce7e2ac17f52fc9564b23fd0961e29985236134ec61c16671078ce1136448fdc18a0f6858ccd9690085020de6a991571f8c28822c41ef11c  kiten-19.12.2.tar.xz"
