community/klettres: move from testing

--- a/community/klettres/APKBUILD
+++ b/community/klettres/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="f7070b1ff08567fc1a43adbb4c2741714572e62ad87903be3494255ed0d15f1c7c60d56fd62fb1b9b1b64d880f71a87be7d1a56ddd7311e0f0cf249c29b30868  klettres-19.12.2.tar.xz"
