--- a/community/kmplot/APKBUILD
+++ b/community/kmplot/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="178ad4683ffbe82775d2cb53cd925d54912e650d2e5ccfec0d2af3a69eff07d195cd81b50ad75db994939bafe92e565597d285abfe875a7859016421b24cc4f6  kmplot-19.12.2.tar.xz"
