community/ktouch: move from testing

--- a/community/ktouch/APKBUILD
+++ b/community/ktouch/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="20d78b0cbce6652c5e4c9e74958cf3fcd0bf56b7a9b1dba508141160b482ceb9e749aeb05917d92e223a0c507227f1bcade3c6844057bc516e6dfdca613f2144  ktouch-19.12.2.tar.xz"
