--- a/community/kitinerary/APKBUILD
+++ b/community/kitinerary/APKBUILD
@@ -29,19 +29,12 @@ makedepends="
 source="https://download.kde.org/stable/release-service/$pkgver/src/kitinerary-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -54,8 +47,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="09795bc36aadef228c1e2139dce3b09af18682d941b32a035e903942a2f1e2bf6db4aefef9d854a9cb11f5cab3aa3ec6a9b22b1d7b838d2fcbdc56da1872ec90  kitinerary-19.12.2.tar.xz"
