testing/dtools: update to 2.090.1

--- a/testing/dtools/APKBUILD
+++ b/testing/dtools/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Mathias LANG <pro.mathias.lang@gmail.com>
 # Maintainer: Mathias LANG <pro.mathias.lang@gmail.com>
 pkgname=dtools
-pkgver=2.088.1
+pkgver=2.090.1
 pkgrel=0
 pkgdesc="Ancillary tools for the D programming language compiler"
 url="https://github.com/dlang/tools"
 arch="x86_64"
 license="BSL-1.0"
-makedepends="ldc ldc-static"
+makedepends="ldc"
 subpackages="$pkgname-ddemangle $pkgname-rdmd"
 source="tools-$pkgver.tar.gz::https://github.com/dlang/tools/archive/v$pkgver.tar.gz"
 builddir="$srcdir/tools-$pkgver/"
@@ -38,4 +38,4 @@ rdmd() {
 	mv "$pkgdir/usr/bin/rdmd" "$subpkgdir/usr/bin/rdmd"
 }
 
-sha512sums="288739656404e345e683e6692a6478a03af8455d3e3ad56d3ba22e1d7d9cb1e5156f70116e4444138c798bfa28cf4b38263b6cd32a8d2483417e8ae51192ea65  tools-2.088.1.tar.gz"
+sha512sums="82f6d3fd4a7f6fd013425894ec5f817c960764479649c97139a019802fc5c2a83671102f1b2a9427e88446055e5a1a4fa884a4b86400a84107b2d5ca322b7a32  tools-2.090.1.tar.gz"
