--- a/community/kturtle/APKBUILD
+++ b/community/kturtle/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="5c82f095806c9c234db746c9db2a865dcbc58667ab0c0488e498ccccbd8f5a662f0984424b32dd527ffa747a7e5b1589a040354cceffda1509eaca3996fdbb79  kturtle-19.12.2.tar.xz"
