community/kwordquiz: move from testing

--- a/community/kwordquiz/APKBUILD
+++ b/community/kwordquiz/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="624e2c79aea2075cc9243c4cba9362bc9906b8f0ac14bd05a48976ae0238733a1d29a241669e535d59b37622fe2672686a940bc6bf97143fee025df2181a1e8a  kwordquiz-19.12.2.tar.xz"
