community/marble: move from testing

--- a/community/marble/APKBUILD
+++ b/community/marble/APKBUILD
@@ -4,7 +4,9 @@ pkgname=marble
 pkgver=19.12.2
 pkgrel=1
 pkgdesc="A Virtual Globe and World Atlas that you can use to learn more about Earth"
-arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by qt5-qtdeclarative
+# ppc64le and s390x blocked by qt5-qtwebengine
+# armhf blocked by qt5-qtdeclarative
+arch="all !ppc64le !s390x !armhf"
 url='https://marble.kde.org'
 license="LGPL-2.1-or-later AND GPL-3.0-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtsvg-dev qt5-qtdeclarative-dev qt5-qtwebengine-dev qt5-qttools-dev qt5-qtserialport-dev qt5-qtlocation-dev kdoctools-dev phonon-dev gpsd-dev kcrash-dev kcoreaddons-dev kwallet-dev knewstuff-dev kparts-dev plasma-framework-dev krunner-dev ki18n-dev kio-dev shared-mime-info"
@@ -14,21 +16,22 @@ subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 options="!check" # Requires itself to be installed
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_INSTALL_SYSCONFDIR=/etc \
 		-DMOBILE=ON \
 		-DBUILD_MARBLE_APPS=YES
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 sha512sums="4e8483ae11f929fdbc052b46557e976789b05619ec36847173b80d9c1bfdb90b82ee0c9ee75edae77ccd7f9cd1feb75da5e42fb97078829b5b40cbfbed446d0d  marble-19.12.2.tar.xz"
